[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.13.0"
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["env", "derive"] }
futures = "0.3.30"
rand = "0.8.5"
sha2 = "0.10.8"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.36", features = ["full","tracing"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.4"

