[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
structopt = "0.3.26"
thiserror = "1.0.56"
tokio = { version = "1.36", features = ["full"] }

